--- a/sub.ui
+++ b/sub.ui
@@ -51,9 +51,9 @@
      <property name="geometry">
       <rect>
        <x>260</x>
-       <y>210</y>
+       <y>180</y>
        <width>281</width>
-       <height>71</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -120,14 +120,32 @@ p, li { white-space: pre-wrap; }
       <string notr="true">border-image:url(:/result/icons/result.jpg)</string>
      </property>
     </widget>
-    <widget class="QWidget" name="text_result" native="true">
+    <widget class="QTextBrowser" name="text_score">
      <property name="geometry">
       <rect>
-       <x>580</x>
-       <y>20</y>
-       <width>211</width>
-       <height>271</height>
+       <x>260</x>
+       <y>250</y>
+       <width>281</width>
+       <height>51</height>
       </rect>
+     </property>
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 20pt</string>
+     </property>
+     <property name="markdown">
+      <string>한국인과 비슷한 발음
+
+</string>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:13px; margin-bottom:13px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;한국인과 비슷한 발음&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </widget>
@@ -474,7 +492,7 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>480</x>
-       <y>190</y>
+       <y>250</y>
        <width>80</width>
        <height>80</height>
       </rect>
@@ -493,7 +511,7 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>220</x>
-       <y>190</y>
+       <y>250</y>
        <width>80</width>
        <height>80</height>
       </rect>
@@ -509,7 +527,7 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>220</x>
-       <y>80</y>
+       <y>60</y>
        <width>360</width>
        <height>30</height>
       </rect>
@@ -534,12 +552,42 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;성별을 선택하세요&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
+    <widget class="QTextBrowser" name="textBrowser_5">
+     <property name="geometry">
+      <rect>
+       <x>220</x>
+       <y>140</y>
+       <width>360</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>60</height>
+      </size>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="lineWrapMode">
+      <enum>QTextEdit::WidgetWidth</enum>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; color:#ff0000;&quot;&gt;잘못된 성별이 선택 된 경우&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; color:#ff0000;&quot;&gt;측정 결과가 이상할 수 있습니다.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
    </widget>
-   <zorder>selectsexual</zorder>
    <zorder>loading</zorder>
    <zorder>mainwindow</zorder>
    <zorder>checknoise</zorder>
    <zorder>resultnoise</zorder>
+   <zorder>selectsexual</zorder>
    <zorder>result</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
